<resources>
    <!--  Base  -->
    <string name="base_null">Null</string>
    <string name="app_name">E-Tiket</string>

    <!--  Menu  -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_jadwal">Jadwal</string>
    <string name="menu_transaksi">Transaksi</string>
    <string name="menu_speedboat">Kapal</string>
    <string name="menu_speedboat_create">Create Kapal</string>
    <string name="menu_speedboat_edit">Edit Kapal</string>
    <string name="menu_jadwal_create">Create Jadwal</string>
    <string name="menu_jadwal_edit">Edit Jadwal</string>
    <string name="menu_reward_create">Create Reward</string>
    <string name="menu_reward_claim">User Reward</string>

    <!--  Auth  -->
    <string name="auth_masuk">Masuk</string>
    <string name="auth_forgot">Lupa Password</string>
    <string name="auth_pin">Pin</string>
    <string name="auth_reset">Reset</string>

    <!--  Menu  -->
    <string name="menu_profile">Profile</string>

    <!--  Profile  -->
    <string name="profile_default_username">Username</string>
    <string name="profile_default_role">Role</string>
    <string name="profile_section_profile">Profile</string>
    <string name="profile_section_menu">Menu</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_change_password">Change Password</string>
    <string name="profile_menu_article">Berita Pelabuhan</string>
    <string name="profile_menu_point">Reward Point</string>
    <string name="profile_menu_review">Review</string>
    <string name="profile_menu_kapal">Kapal</string>
    <string name="profile_menu_jadwal">Jadwal</string>
    <string name="profile_menu_transaksi">Transaksi</string>
    <string name="profile_logout">Logout</string>

    <!--  Review Detail  -->
    <string name="rd_from">From</string>
    <string name="rd_to">To</string>
    <string name="rd_detail">Detail Order</string>

    <!--  Dashboard  -->
    <string name="dashboard_total">Total</string>

    <!--  Kapal  -->
    <string name="kapal_nama">Nama</string>
    <string name="kapal_kapasitas">Kapasitas</string>
    <string name="kapal_deskripsi">Deskripsi</string>
    <string name="kapal_contact">Contact Service</string>
    <string name="kapal_lama_operasi">Tanggal Beroperasi</string>
    <string name="kapal_tipe">Tipe Kapal</string>
    <string name="kapal_pelabuhan">Pelabuhan</string>
    <string name="kapal_golongan">Golongan Kapal</string>
    <string name="kapal_save">Save</string>

    <!--  Dashboard  -->
    <string name="jadwal_kapal">Kapal</string>
    <string name="jadwal_asal_pelabuhan">Asal Pelabuhan</string>
    <string name="jadwal_tujuan_pelabuhan">Tujuan Pelabuhan</string>
    <string name="jadwal_tanggal">Tanggal</string>
    <string name="jadwal_waktu">Waktu Berangkat</string>
    <string name="jadwal_estimasi">Estimasi Waktu</string>
    <string name="jadwal_harga">Harga</string>

    <!--User-->
    <string name="user_nama">Nama</string>
    <string name="user_alamat">Alamat</string>
    <string name="user_jeniskelamin">Jenis Kelamin</string>
    <string name="user_nohp">No HP</string>
    <string name="user_email">Email</string>
    <string name="user_simpan">Simpan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="qr_screen_desc">Scan Ticket QR Here!</string>
    <string name="sb_qr">QR Scanner</string>

    <string name="btn_approve">Approve</string>
    <string name="btn_review">Review</string>
    <string name="btn_payment">Proof of Payment</string>
</resources>