<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateKapalActivity">

    <include android:id="@+id/main_toolbar"
        layout="@layout/main_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_24"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/image_wrapper"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:paddingVertical="@dimen/margin_4">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_kapal"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_centerInParent="true"
                    app:civ_border_color="@color/white"
                    android:src="@drawable/profile"/>
<!--                <ImageButton-->
<!--                    android:layout_width="@dimen/margin_48"-->
<!--                    android:layout_height="@dimen/margin_48"-->
<!--                    android:background="@drawable/bg_btn_circle"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_alignParentBottom="true"-->
<!--                    android:src="@drawable/ic_camera"/>-->
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/namaTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_4"
                android:hint="@string/kapal_nama"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namaForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kapasitasTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_4"
                android:hint="@string/kapal_kapasitas"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kapasitasForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deskripsiTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_4"
                android:hint="@string/kapal_deskripsi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deskripsiForm"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:overScrollMode="always"
                    android:inputType="textLongMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contactTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_4"
                android:hint="@string/kapal_contact"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipeTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_4"
                android:hint="@string/kapal_tipe"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/pelabuhanTextField"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginVertical="@dimen/margin_4"-->
<!--                android:hint="@string/kapal_pelabuhan"-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">-->

<!--                <AutoCompleteTextView-->
<!--                    android:id="@+id/autoCompletePelabuhan"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:inputType="none"/>-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/golonganTextField"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginVertical="@dimen/margin_4"-->
<!--                android:hint="@string/kapal_golongan"-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">-->

<!--                <AutoCompleteTextView-->
<!--                    android:id="@+id/autoCompleteGolongan"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:inputType="none"/>-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lamaOperasiTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_4"
                android:hint="@string/kapal_lama_operasi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lamaOperasiForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_4"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_8"
                    android:backgroundTint="@color/primary_red"
                    app:icon="@drawable/ic_baseline_delete"
                    android:textColor="@color/primary_white"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Simpan"
                    android:textColor="@color/primary_white"
                    android:textSize="16sp"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>